--- a/textbook/QTL_seq.ipynb
+++ b/textbook/QTL_seq.ipynb
@@ -29,7 +29,15 @@
         "id": "31NfnQcvPDoY"
       },
       "source": [
-        "# QTL-seq - practice -"
+        "# QTL-seq - practice -\n",
+        "\n",
+        "We will perform QTL-seq analysis using simulation data & perform sliding window analysis using yesterday's result in this practice part.\n",
+        "\n",
+        "It may help you to understand ...\n",
+        "* the process of QTL-seq analysis \n",
+        "* How to interpret the results of QTL-seq analysis\n",
+        "* What data is required for QTL-seq\n",
+        "* What is sliding window analysis & Why it is required."
       ]
     },
     {
@@ -42,11 +50,11 @@
         "\n",
         "* Practice - QTL-seq analysis for simulation data -\n",
         "\n",
-        "  * We assume very simple organism & conduct MutMap analysis to understand the process of QTL-seq.\n",
+        "  * We assume very simple organism & conduct QTL-seq analysis to understand the process of QTL-seq.\n",
         "\n",
         "* Sliding window analysis\n",
         "  * What is sliding window analysis for MutMap & QTL-seq?\n",
-        "  * We use published data in MutMap paper [(Abe et al., 2012)](https://www.nature.com/articles/nbt.2095) & conduct sliding window analysis."
+        "  * We use published data in MutMap paper [(Abe et al., 2012)](https://www.nature.com/articles/nbt.2095) & perform sliding window analysis."
       ],
       "metadata": {
         "id": "wZpUAKrgmHnm"
@@ -74,7 +82,7 @@
         "\n",
         "The brief process of QTL-seq is below:\n",
         "\n",
-        "1. Cross 2 cultivars to generate F2 population and survey pnehotypes of F2  progenies.\n",
+        "1. Cross 2 cultivars that showed different phenotype to generate F2 population and survey phenotypes of F2  progenies.\n",
         "\n",
         "1. If there are segregtion, Select 20~ samples each showing opposite phenotypes (high and low).\n",
         "\n",
@@ -82,7 +90,7 @@
         "\n",
         "1. Sequence reads are aligned to the reference genome of one parent. And then, calculate SNP-index for whole genome region based on alignment results.\n",
         "\n",
-        "1. Finally, to compare SNP-index between high bulk and low bulk, calculate ΔSNP-index which indicate the difference of SNP-index. As a results, the genomic region which allele frequency is hugely different between high and low bulk are identified as high ΔSNP-index(0 <) or low ΔSNP-index(< 0).\n",
+        "1. Finally, to compare SNP-index between high bulk and low bulk, calculate ΔSNP-index which indicate the difference of SNP-index between high and low bulks. As a results, the genomic region which allele frequency is hugely different between high and low bulk are identified as high ΔSNP-index(0 <) or low ΔSNP-index(< 0).\n",
         "\n",
         "This genomic region is candidate of causative region that affect phenotype.\n",
         "\n",
@@ -128,7 +136,7 @@
         "\n",
         "* Cultivar B has 40 SNPs that are different from reference genotype.\n",
         "\n",
-        "* One of 20 SNPs has a big effect on the plant height. Other SNPs also have small effect.\n",
+        "* One of 40 SNPs has a big effect on the plant height. Other SNPs also have small effect.\n",
         "\n",
         "(It's not realistic, just simulation.)\n",
         "\n",
@@ -206,13 +214,15 @@
       "source": [
         "## 1. Cross parent lines and generate F2 progeny\n",
         "\n",
-        "To identify a causative SNP, we perform QTL-seq analysis.\n",
+        "To identify a causative SNP that affect plant height of cultivar A & B, we perform QTL-seq analysis.\n",
         "\n",
         "At first, we make F2 population by crossing cultivar A and cultivar B.\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation6.png?raw=true\" alt=\"title\" height=\"300px\">\n",
         "\n",
-        "The phenotypes of F2 progenies are randomly distributed depending on their genotypes."
+        "The phenotypes of F2 progenies are randomly distributed depending on their genotypes.\n",
+        "\n",
+        "In the first simulation, we generate 200 F2 progenies."
       ],
       "metadata": {
         "id": "aoNMPnGj3NHF"
@@ -286,6 +296,8 @@
         "So, we have the genotype data of simulated population.\n",
         "\n",
         "But we usually don't know the genotype of progenies in reality.\n",
+        "\n",
+        "We can just know phenotype values.\n",
         "```"
       ],
       "metadata": {
@@ -299,9 +311,7 @@
         "\n",
         "The difference of genotype between high phenotype & low phenotype might cause the phenotypic variance.\n",
         "\n",
-        "So, to identify which mutaion is the mutation that has significant effect,\n",
-        "\n",
-        "we select samples which showed high phenotype and low phenotype.\n",
+        "So, to identify which mutaion has significant effect, we select sample sets which showed high phenotype and low phenotype.\n",
         "\n",
         "Then, we perform bulked sequencing for each sample set.\n",
         "\n",
@@ -329,15 +339,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "After run the above program, the program generate fasta file of low & high bulked sequences, respectively.\n",
+        "After run the above program, the program generate fastq file of low & high bulked sequences, respectively.\n",
         "\n",
-        "You can check these fasta files using file system ↓\n",
+        "You can check these fastq files using file system ↓\n",
         "\n",
         "```\n",
         "How to check files in your Google Colab server space.\n",
         "1. Click the file icon in upper left.\n",
         "2. The file list showed files in your server space.\n",
-        "(3. if there is no \"bulked_sequences.fasta\", please click the third icon from the right\n",
+        "(3. if there is no \"high_bulked_sequences.fastq\" and \"low_bulked_sequences.fastq\", please click the third icon from the right\n",
         "```\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/filesystem.png?raw=true\" alt=\"title\" height=\"250px\">"
       ],
@@ -358,15 +368,9 @@
         "\n",
         "To predict which SNP position is causative from bulked sequence data,\n",
         "\n",
-        "we will map these sequence reads to the **cultivar_A** genotype and calculate SNP-index.\n",
+        "we will align these sequence reads to the **cultivar_A** genotype and calculate SNP-index.\n",
         "\n",
-        "Based on SNP-index of high-bulk and low-bulk, we identify the allele that only one of bulked samples have.\n",
-        "\n",
-        "```\n",
-        "※In this notebook, we used fasta file as sequence data. \n",
-        "\n",
-        "But basically, fastq file is used for MutMap analysis, which include quality score of sequences.\n",
-        "```"
+        "Based on SNP-index of high-bulk and low-bulk, we identify the allele that only one of bulked samples have.\n"
       ],
       "metadata": {
         "id": "ICTDKi2IDXG6"
@@ -377,9 +381,9 @@
       "source": [
         "### Alignment reads to the reference sequence\n",
         "\n",
-        "After we get sequence data of high bulked samples & low bulked samples, we will map these sequences to the cultivar A genome & align them.\n",
+        "After we get sequence data of high bulked samples & low bulked samples, we will align these sequences to the cultivar A genome.\n",
         "\n",
-        "Then, we calculate the bias of the number of variant for each position.\n",
+        "Then, we calculate the bias of the number of variant for each SNP position.\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation9.png?raw=true\" alt=\"title\" height=\"400px\">\n",
         "\n",
@@ -387,7 +391,9 @@
         "\n",
         "But basically, mapping tool such as [BWA](http://bio-bwa.sourceforge.net/) are used.\n",
         "\n",
-        "So, if you conduct QTL-seq analysis by your own data, mapping tool is recommended."
+        "So, if you conduct QTL-seq analysis by your own data, it has required to use mapping tool.\n",
+        "\n",
+        "But QTL-seq analysis pipeline that we introduced before contains mapping tools, you don't need to care about it."
       ],
       "metadata": {
         "id": "cWYdn7OlDbJ3"
@@ -439,9 +445,9 @@
         "\n",
         "After the alignment, we calculate SNP index for each bulk.\n",
         "\n",
-        "In this study, SNP index showed the ratio of the allele which is different from cultivar_A for each genomic position.\n",
+        "In this study, SNP index showed the ratio of the allele which is different from cultivar_A for each SNP position.\n",
         "\n",
-        "SNP index is close to 1, the ratio is biased (almost all samples has a SNP that base is different from cultivar_A at this position).\n",
+        "If SNP index is close to 1, the ratio is biased (almost all samples has a SNP that base is different from cultivar_A at this position).\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation12.png?raw=true\" alt=\"title\" height=\"250px\">"
       ],
@@ -488,9 +494,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 5. Visulalize SNP index plot\n",
+        "## 5. Visulalize SNP index plot for each bulk samples\n",
         "\n",
-        "After calculating SNP index, visualize it to search the causative position.\n"
+        "After calculating SNP index, visualize it to see the SNP position that allele frequency is biased to the sample set.\n"
       ],
       "metadata": {
         "id": "LuuOeEd7EEeD"
@@ -510,7 +516,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "These graph looks there are several causative candidate positions ... ?"
+        "These graph looks there are several causative candidate positions in high bulk ... even though we simulated only 1 SNP has large effect.\n",
+        "\n",
+        "Because some position showed high SNP index in low bulk. This shared positions may not be candidates.\n",
+        "\n",
+        "→ we should remove some position that also showed high SNP-index in **Low bulk** from these positions. \n"
       ],
       "metadata": {
         "id": "DtTqddIieWiw"
@@ -649,6 +659,33 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# (c.f. When you use QTL-seq analysis pipeline)\n",
+        "\n",
+        "when you use the pipeline that our group developped, you just install pipeline & use below command.\n",
+        "\n",
+        "The required input data is ...\n",
+        "* reference fasta\n",
+        "* reference sequence reads\n",
+        "* High bulk DNA sequence reads \n",
+        "* Low bulk DNA sequence reads \n",
+        "\n",
+        "```\n",
+        "qtlseq -r reference.fasta -p reference.fastq -b1 high_bulked_sequences.fastq -b2 low_bulked_sequences.fastq -n1 20 -n2 20 -o output_name\n",
+        "```\n",
+        "\n",
+        "ex) The public avaliable reference genome of Rice is Nipponbare cultivar.\n",
+        "\n",
+        "But if you want to use different cultivar like Hitomebore cultivar as a reference, reference.fastq is required.\n",
+        "\n",
+        "c.f. https://github.com/YuSugihara/QTL-seq\n"
+      ],
+      "metadata": {
+        "id": "DT0Rb-vsyrZH"
+      }
     },
     {
       "cell_type": "markdown",
@@ -816,7 +853,7 @@
       "source": [
         "Red circles showed high SNP-index (>0.8). \n",
         "\n",
-        "There are multiple position showed high SNP-index.\n",
+        "There are multiple positions showed high SNP-index.\n",
         "\n",
         "To extract more reliable regions from this results, sliding window analysis is one approach."
       ],
@@ -859,7 +896,7 @@
         "\n",
         "Plot showed 22~23Mbp in chromosome 10 showed high average SNP-index.\n",
         "\n",
-        "Following this result, there is a gene that related to leaf color in 22~23Mbp, chromosome 10.\n",
+        "This result suggests that there is a gene that related to leaf color in 22~23Mbp, chromosome 10.\n",
         "\n",
         "In this region, there is a gene \"OsCAO1\" that codes Chlorophyllide a oxygenase.\n",
         "\n",
