--- a/textbook/QTL_seq.ipynb
+++ b/textbook/QTL_seq.ipynb
@@ -146,45 +146,34 @@
       "source": [
         "## Simulation (default setting):\n",
         "\n",
-        "* We assume the plant which has only 1 chromosome & 100 bp.\n",
+        "In this practice, we assume...\n",
         "\n",
-        "* There are 2 cultivars, cultivar A & cultivar B. The height of cultivar B is shorter than cultivar A.\n",
+        "* **The plant which has only 1 chromosome & 100 bp.**\n",
         "\n",
-        "* Cultivar B has 40 SNPs that are different from reference genotype.\n",
+        "* **There are 2 cultivars. cultivar A is higher plant than cultivar B.**\n",
         "\n",
-        "* One of 40 SNPs has a big effect on the plant height. Other SNPs also have small effect.\n",
+        "* **Cultivar B has 40 SNPs that are different from cultivar A genotype.**\n",
         "\n",
-        "(It's not realistic, just simulation.)\n",
+        "* **One of 40 SNPs has a big effect on the plant height. Other SNPs have small effect.**\n",
+        "\n",
+        "    (But we don't know which SNP has big effect.)\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation5.png?raw=true\" alt=\"title\" height=\"200px\">\n",
         "\n",
-        "Please tun the below code to make 2 cultivars !!\n"
+        "If we have these cultivars, to identify the SNP that have big effect on plant height,\n",
+        "\n",
+        "Let's try to perform QTL-seq analysis !!"
       ],
       "metadata": {
         "id": "czAaaKCYuZ1S"
       }
     },
     {
-      "cell_type": "code",
-      "source": [
-        "cultivar_A, cultivar_B = make_2_cultivars(length=100, snp=40)\n",
-        "print(\"cultivar A (tall):\", cultivar_A)\n",
-        "print(\"cultivar B (short):\", cultivar_B)"
-      ],
-      "metadata": {
-        "id": "jE2xL8FPlZ-E"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "## 1. Cross parent lines and generate F2 progeny\n",
+        "## 1. Cross parent lines and generate F2 population\n",
         "\n",
-        "To identify a causative SNP that affect plant height of cultivar A & B, we perform QTL-seq analysis.\n",
-        "\n",
-        "At first, we make F2 population by crossing cultivar A and cultivar B to perform QTL-seq.\n",
+        "At first in QTL-seq analysis, we'll generate F2 population from cultivar A & cultivar B.\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation6.png?raw=true\" alt=\"title\" height=\"300px\">\n",
         "\n",
@@ -192,9 +181,9 @@
         "\n",
         "<br>\n",
         "\n",
-        "Please run the below code to generate F2 progenies between Cultivar A and B.\n",
+        "Please run the below code to generate F2 population between Cultivar A and B.\n",
         "\n",
-        "The below code generates 200 F2 progenies."
+        "The below code generates 200 F2 population & check distribution of phenotype values of F2."
       ],
       "metadata": {
         "id": "aoNMPnGj3NHF"
@@ -203,6 +192,7 @@
     {
       "cell_type": "code",
       "source": [
+        "cultivar_A, cultivar_B = make_2_cultivars(length=100, snp=40)\n",
         "f2_progeny = make_F2_progeny(cultivar_A, cultivar_B, progeny=200)\n",
         "check_distribution(f2_progeny)"
       ],
@@ -215,15 +205,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "※ Until here(Generate F2 progeny), the process are experimental part in reality.\n",
-        "\n",
         "```\n",
-        "※ The above program generates genotype of progeny which is randomly mixed between cultivar A and cultivar B.\n",
-        "\n",
+        "※ Memo\n",
+        "The simulation program generates genotype of progeny which is randomly mixed between cultivar A and cultivar B.\n",
         "Then, program decide the phenotype values based on the simulated effect of each SNP genotype (& This program consider the error variance).\n",
-        "\n",
         "So, the program saved the genotype data of simulated population & the effect of each SNP.\n",
-        "\n",
         "Therefore, we can check the result of QTL-seq is correct or not by comparing simulated data.\n",
         "```"
       ],
@@ -234,13 +220,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 3. Bulk sequence of samples with high phenotype & low phenotype.\n",
+        "## 2. Bulk sequence of high phenotype samples & that of low phenotype samples.\n",
         "\n",
-        "If there is a SNP that only high(/low) phenotype samples have, this SNP is causative.\n",
+        "The 2nd step is bulk sequencing of high phenotype samples & low phenotype samples.\n",
         "\n",
-        "So, to identify which SNP has significant effect, we select sample sets which showed high phenotype and low phenotype.\n",
-        "\n",
-        "Then, we perform bulked sequencing for each sample set.\n",
+        "If there is a SNP that only high(/low) phenotype samples have, this SNP may habe big effect.\n",
         "\n",
         "In this notebook, we collect top 20 samples and bottom 20 samples for phenotype values.\n",
         "\n",
@@ -258,7 +242,7 @@
     {
       "cell_type": "code",
       "source": [
-        "high_reads, low_reads = high_and_low_bulk_sequencing(f2_progeny, top=20, bottom=20, reads=500)"
+        "high_reads, low_reads = high_and_low_bulk_sequencing(f2_progeny, top=20, bottom=20, reads=200)"
       ],
       "metadata": {
         "id": "soVcOIaee44t"
@@ -269,7 +253,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "You can check these fastq files using file system ↓\n",
+        "The above program perform sequencing of bulk DNA & sequence results(fastq file) is saved in the Colab server.\n",
+        "\n",
+        "You can check sequence result (fastq files) using file system ↓\n",
         "\n",
         "```\n",
         "How to check files in your Google Colab server space.\n",
@@ -286,28 +272,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 4. Calculate SNP index\n",
+        "## 3. Alignment reads to the cultivar A sequence genotype\n",
         "\n",
-        "To check are there SNPs that only high(/low) phenotype samples have,  we calculate SNP-index for each bulk.\n",
+        "After sequencing each bulked DNA, we will align these sequence reads to the cultivar A genome to identify SNP positions.\n",
         "\n",
-        "We will align these sequence reads to the **cultivar_A** genotype and calculate SNP-index.\n",
-        "\n",
-        "Based on SNP-index of high-bulk and low-bulk, we identify the SNP that only one of bulked samples have.\n",
-        "\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation8.png?raw=true\" alt=\"title\" height=\"300px\">\n"
-      ],
-      "metadata": {
-        "id": "ICTDKi2IDXG6"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Alignment reads to the reference sequence\n",
-        "\n",
-        "To calculate SNP-index, we need to align sequences to the cultivar A genome.\n",
-        "\n",
-        "Then, we calculate the number of variants in bulked DNA for each SNP position.\n",
+        "Especially, we want to know high(low) bulk specific SNPs.\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation9.png?raw=true\" alt=\"title\" height=\"400px\">\n",
         "\n",
@@ -333,12 +302,10 @@
       "source": [
         "\n",
         "```\n",
-        "※ In this notebook, we perform alignment of sequence reads by our program.\n",
-        "\n",
+        "※ Memo\n",
+        "In this notebook, we perform alignment of sequence reads by our program.\n",
         "But basically, when we perform alignment, we use mapping tool such as BWA(http://bio-bwa.sourceforge.net/).\n",
-        "\n",
         "So, if you conduct QTL-seq analysis by your own data, it may has required to use mapping tool.\n",
-        "\n",
         "But QTL-seq pipeline that we will introduce later contains mapping tools. So, you don't need to care about it.\n",
         "```"
       ],
@@ -349,7 +316,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Calculate SNP index based on alignment results for low bulk & high bulk\n",
+        "## 4. Calculate SNP index based on alignment results for low bulk & high bulk\n",
         "\n",
         "After the alignment, we can calculate SNP index for each bulk.\n",
         "\n",
@@ -383,41 +350,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 5. Visulalize SNP index plot for each bulk samples\n",
+        "## 5. Calculate ΔSNP-index\n",
         "\n",
-        "After calculating SNP index, visualize it to see the SNP position that allele frequency is biased to the each bulk.\n"
-      ],
-      "metadata": {
-        "id": "LuuOeEd7EEeD"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "visualize_SNP_index(high_bulk_SNP_index, low_bulk_SNP_index)"
-      ],
-      "metadata": {
-        "id": "ZMDTG3c38nDD"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## 6. Calculate ΔSNP-index\n",
+        "After we get SNP-index data for each bulk (high & low bulk), we should compare them.\n",
         "\n",
-        "These above graphs showed there are several high SNP-index positions in each bulk.\n",
-        "\n",
-        "But positions that showed high SNP index in both high and low bulk may not be candidates.\n",
-        "\n",
-        "So, we should remove this kind of positions and identify the high SNP-index position that only High or Low bulk samples has.\n",
-        "\n",
-        "To do that, we calculate ΔSNP-index.\n",
+        "ex) SNP positions that showed high SNP index in both high and low bulk may not be candidates.\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation11.png?raw=true\" alt=\"title\" height=\"600px\">\n",
         "\n",
-        "Please run the below code to caculate ΔSNP-index !!"
+        "So, we should remove this kind of positions and identify the high SNP-index position that only High or Low bulk samples has.\n",
+        "\n",
+        "To do that, we calculate ΔSNP-index = SNP-index(high bulk) - SNP-index(low bulk).\n",
+        "\n",
+        "Please run the below code to caculate ΔSNP-index"
       ],
       "metadata": {
         "id": "51y8iDfcqzE6"
@@ -460,7 +405,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Red circle showed the position of ΔSNP-index > 0.9."
+        "Red circle showed the position of ΔSNP-index = 1."
       ],
       "metadata": {
         "id": "2UzqTMk2jwiL"
@@ -625,74 +570,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Dataset\n",
+        "## Yesterday's result\n",
         "\n",
         "We used yesterday's results of SNP-index.\n",
         "\n",
-        "**Materials & Methods are same as yesterday.**\n"
+        "**※Materials & Methods are same as yesterday.**\n",
+        "\n",
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/material.png?raw=true\" alt=\"title\" height=\"400px\">\n",
+        "\n",
+        "### SNP-index\n",
+        "\n",
+        "Please run the below code, to download yesterday's result (alignment & SNP calling results & SNP-index) !!"
       ],
       "metadata": {
         "id": "tWZ-iVMD0foG"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Materials\n",
-        "\n",
-        "We used rice cultivar \"Hitomebore\" as a reference. \n",
-        "\n",
-        "\"Hit1917-pl1\" cultivar was generated by mutagenesis and showed lightgreen leaf color (low chlorophyll content).\n",
-        "\n",
-        "Hit1917-pl1 has almost 1500 SNPs that are different from reference.\n"
-      ],
-      "metadata": {
-        "id": "KF6GfH3MNxlq"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Methods\n",
-        "\n",
-        "To identify which SNP variant is causative for the change of leaf color, we conducted MutMap analysis.\n",
-        "\n",
-        "We generated over 200 F2 progenies by crossing reference and mutant lines.\n",
-        "\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/material.png?raw=true\" alt=\"title\" height=\"400px\">"
-      ],
-      "metadata": {
-        "id": "e2Pav8mkvHcw"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Bulked sequencing & alignment\n",
-        "\n",
-        "Then, we conducted bulked sequencing of progenies that showed mutant phenotype.\n",
-        "\n",
-        "(You can access sequence data in [DRA000499](https://www.ncbi.nlm.nih.gov/sra?term=DRA000499) as a reference.)\n",
-        "\n",
-        "After that, we aligned these sequences and calculate SNP index.\n",
-        "\n",
-        "In this notebook, we used [table data](https://raw.githubusercontent.com/CropEvol/lecture/master/data/mutmap_chr10.txt) that showed alignment results (the SNP information) in the chromosome10.\n",
-        "\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/sample_data.png?raw=true\" alt=\"title\" height=\"300px\">\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "2kWaCxBISXog"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Please run the below code, to download the yesterday result (alignment & SNP calling results & SNP-index) !!\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "OgxXpuusSf09"
       }
     },
     {
@@ -700,36 +591,12 @@
       "source": [
         "!wget -q -O mutmap_dataset.txt https://raw.githubusercontent.com/CropEvol/lecture/master/data/mutmap_chr10.txt\n",
         "SNP_index = get_yesterday_SNP_index()\n",
-        "SNP_index"
+        "display(SNP_index)\n",
+        "visualize_SNP_index2(SNP_index)"
       ],
       "metadata": {
         "id": "p7yOprThSkOA"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "pBWuwDJz-Jai"
-      },
-      "source": [
-        "## Visualize SNP index plot\n",
-        "\n",
-        "Below code visualize original SNP index plot. (same plot as yesterday.)\n",
-        "\n",
-        "- x axis: position in the chromosome（column:`POS`）\n",
-        "- y axis: SNP index（column:`SNP_index`）\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "wyCIIOKbuV7p"
-      },
-      "source": [
-        "visualize_SNP_index2(SNP_index)"
-      ],
       "execution_count": null,
       "outputs": []
     },
