--- a/textbook/QTL_seq.ipynb
+++ b/textbook/QTL_seq.ipynb
@@ -108,6 +108,8 @@
       "source": [
         "# Practice: QTLseq analysis using very simple simulation data\n",
         "\n",
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/intro2.png?raw=true\" alt=\"title\" height=\"200px\">\n",
+        "\n",
         "!! please run the below code, this code downloads programs. !!"
       ],
       "metadata": {
