--- a/textbook/QTL_seq.ipynb
+++ b/textbook/QTL_seq.ipynb
@@ -146,19 +146,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Simulation (default setting):\n",
+        "## Simulation setting:\n",
         "\n",
         "In this practice, we assume...\n",
         "\n",
-        "* **The plant which has only 1 chromosome & 100 bp.**\n",
+        "* **The plant which has only 1 chromosome & genome size is 100bp.**\n",
         "\n",
         "* **There are 2 cultivars. cultivar A is higher plant than cultivar B.**\n",
         "\n",
-        "* **Cultivar B has 40 SNPs that are different from cultivar A genotype.**\n",
+        "* **Cultivar B has 40 SNPs which genotypes are different from cultivar A genotype.**\n",
         "\n",
-        "* **One of 40 SNPs has a big effect on the plant height. Other SNPs have small effect.**\n",
+        "* **1 SNP has a big effect on the plant height. Other 39 SNPs have small effect.**\n",
         "\n",
-        "    (But we don't know which SNP has big effect.)\n",
+        "    **But we don't know which SNP has big effect.**\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation5.png?raw=true\" alt=\"title\" height=\"200px\">\n",
         "\n",
@@ -226,9 +226,9 @@
         "\n",
         "The 2nd step is bulk sequencing of high phenotype samples & low phenotype samples.\n",
         "\n",
-        "If there is a SNP that only high(/low) phenotype samples have, this SNP may habe big effect.\n",
+        "If there is a SNP mutation that only high(/low) phenotype samples have, this SNP may habe big effect.\n",
         "\n",
-        "In this notebook, we collect top 20 samples and bottom 20 samples for phenotype values.\n",
+        "In this study, we collect top 20 samples and bottom 20 samples for phenotype values.\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation7.png?raw=true\" alt=\"title\" height=\"400px\">\n",
         "\n",
@@ -276,9 +276,7 @@
       "source": [
         "## 3. Alignment reads to the cultivar A sequence genotype\n",
         "\n",
-        "After sequencing each bulked DNA, we will align these sequence reads to the cultivar A genome to identify SNP positions.\n",
-        "\n",
-        "Especially, we want to know high(low) bulk specific SNPs.\n",
+        "After sequencing each bulked DNA, we will align these sequence reads to the cultivar_A genome to identify SNP positions for each bulk samples.\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation9.png?raw=true\" alt=\"title\" height=\"400px\">\n",
         "\n",
@@ -318,13 +316,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 4. Calculate SNP index based on alignment results for low bulk & high bulk\n",
+        "## 4. Calculate SNP-index based on alignment results for low bulk & high bulk\n",
         "\n",
         "After the alignment, we can calculate SNP index for each bulk.\n",
         "\n",
-        "In this study, SNP index showed the ratio of the allele which is different from cultivar_A for each SNP position.\n",
+        "In the QTL-seq, SNP-index showed the ratio of number of reads which are different genotype from cultivar_A.\n",
         "\n",
-        "If SNP index is close to 1, the ratio is biased (almost all samples has a SNP that is different from cultivar_A genotype).\n",
+        "If SNP-index is close to 1, most reads showed different genotype from cultivar_A genotype in the SNP position.\n",
         "\n",
         "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation12.png?raw=true\" alt=\"title\" height=\"250px\">\n",
         "\n",
@@ -407,10 +405,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Red circle showed the position of ΔSNP-index = 1."
+        "The SNP position which showed high ΔSNP-index, might have the big effect on plant height."
       ],
       "metadata": {
-        "id": "2UzqTMk2jwiL"
+        "id": "LDR1Ou-WWR8_"
       }
     },
     {
@@ -456,10 +454,10 @@
         "# Play with simulation!\n",
         "\n",
         "You can specify\n",
-        "- the length of reference genome\n",
-        "- the number of mutations\n",
-        "- the number of progeny\n",
-        "- the number of reads\n",
+        "- the length of reference genome (genome size)\n",
+        "- the number of SNP mutations\n",
+        "- the number of F2 progeny\n",
+        "- the number of sequence reads\n",
         "\n",
         "please make different situation & perform MutMap analysis using below code."
       ],
@@ -506,13 +504,7 @@
         "qtlseq -r reference.fasta -p reference.fastq -b1 high_bulked_sequences.fastq -b2 low_bulked_sequences.fastq -n1 20 -n2 20 -o output_name\n",
         "```\n",
         "\n",
-        "<br>\n",
-        "\n",
-        "```\n",
-        "ex) The public avaliable reference genome of Rice is Nipponbare cultivar.\n",
-        "\n",
-        "But if you want to use different cultivar like Hitomebore cultivar as a reference, reference.fastq is required.\n",
-        "```"
+        "then, you can get data file that contains ΔSNP positions & SNP-index values & graph that visualize it."
       ],
       "metadata": {
         "id": "DT0Rb-vsyrZH"
@@ -536,7 +528,7 @@
         "\n",
         "Different from simulation study, the real data (experimental data) does not always showed theoretically correct values.\n",
         "\n",
-        "The real data usually contains errors, outliers, human error...etc.\n",
+        "The real data usually contains errors, outliers, human error...etc. And it generates false positives.\n",
         "\n",
         "For MutMap(QTLseq) analysis, SNP-index will be different from expected values due to the errors.\n",
         "\n",
@@ -548,14 +540,9 @@
         "\n",
         "To escape these errors, one approach is taking the average of SNP-indexes of nearby regions.\n",
         "\n",
-        "It will diminish the influence of error and result in a more correct value.\n",
+        "It will diminish the influence of error, and we can get more reliable SNP-index results.\n",
         "\n",
-        "Applying sliding window analysis to MutMap/QTL-seq, we can calculate mean values of SNP-index in the specific interval and identify regions that show high/low average SNP-index.\n",
-        "\n",
-        "As a result, we can get highly reliable SNP-index results.\n",
-        "\n",
-        "\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation13.png?raw=true\" alt=\"title\" height=\"400px\">\n",
+        "<br>\n",
         "\n",
         "The process of sliding window analysis is...\n",
         "\n",
@@ -563,7 +550,9 @@
         "1. Extract data (SNP-indexes) in the interval.\n",
         "1. Calculate average value of them.\n",
         "1. Move the interval by the step size.\n",
-        "1. Continue 2-4 process to finish the whole region."
+        "1. Continue 2-4 process to finish the whole region.\n",
+        "\n",
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/simulation13.png?raw=true\" alt=\"title\" height=\"400px\">"
       ],
       "metadata": {
         "id": "95A7GRBEsOjS"
@@ -655,7 +644,13 @@
         "\n",
         "In this region, there is a gene \"OsCAO1\" that codes Chlorophyllide a oxygenase.\n",
         "\n",
-        "And it was known that the knock-out line of OsCAO1 showed light green leaf. (Abe et al., 2012)。\n"
+        "And it was known that the knock-out line of OsCAO1 showed light green leaf. (Abe et al., 2012)。\n",
+        "\n",
+        "<br>\n",
+        "\n",
+        "But, of course, even after applying sliding window anaylsis, results may still contains false positive.\n",
+        "\n",
+        "In that case, we have to consider other approach to select candidate SNPs, such as biological information of the SNP position(exon, important gene region...etc)\n"
       ],
       "metadata": {
         "id": "9wguB-6sx0YF"
