--- a/textbook/QTL_seq.ipynb
+++ b/textbook/QTL_seq.ipynb
@@ -265,7 +265,13 @@
         "2. The file list showed files in your server space.\n",
         "(3. if there is no \"high_bulked_sequences.fastq\" and \"low_bulked_sequences.fastq\", please click the third icon from the right\n",
         "```\n",
-        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/filesystem.png?raw=true\" alt=\"title\" height=\"250px\">"
+        "<img src=\"https://github.com/slt666666/FAO_lecture/blob/main/filesystem.png?raw=true\" alt=\"title\" height=\"250px\">\n",
+        "\n",
+        "```\n",
+        "※Memo\n",
+        "If you want to know more about fastq format, please check here↓\n",
+        "https://en.wikipedia.org/wiki/FASTQ_format\n",
+        "```"
       ],
       "metadata": {
         "id": "17FTRBQqbNaQ"
