--- a/textbook/QTL_seq.ipynb
+++ b/textbook/QTL_seq.ipynb
@@ -152,9 +152,9 @@
         "\n",
         "* **The plant which has only 1 chromosome & genome size is 100bp.**\n",
         "\n",
-        "* **There are 2 cultivars. cultivar A is higher plant than cultivar B.**\n",
+        "* **There are 2 cultivars. cultivar A is higher plant than cultivar B.** The reference genome of cultivar A is publicly available.\n",
         "\n",
-        "* **Cultivar B has 40 SNPs which genotypes are different from cultivar A genotype.**\n",
+        "* **Cultivar B has 40 SNPs which genotypes are different from cultivar A genotype.** \n",
         "\n",
         "* **1 SNP has a big effect on the plant height. Other 39 SNPs have small effect.**\n",
         "\n",
